[build-system]
requires = [
    "numpy>=1.19.3",
    "setuptools>=60",
    "setuptools_scm[simple]>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ar"
dynamic = ["version"]
description = "Autoregressive process modeling tools"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "MPL-2.0"}
requires-python = ">=3.7"
authors = [
    {name = "Rhys Ulerich", email = "rhys.ulerich@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.19.3",
]

[project.urls]
Homepage = "https://github.com/RhysU/ar"
Repository = "https://github.com/RhysU/ar"

[tool.setuptools_scm]
write_to = "_version.py"
